front-end/web-proxy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
        - name: envoy.filters.network.http_connection_manager
          config:
            codec_type: auto
            stat_prefix: ingress_http
            route_config:
              name: local_route
              virtual_hosts:
              - name: local_service
                domains: ["*"]
                routes:
                - match: { prefix: "/ordercomm.OrderSvc" }
                  route:
                    cluster: order_service
                    max_grpc_timeout: 0s
                - match: { prefix: "/activitycomm.ActivitySvc"}
                  route:
                    cluster: activity_service
                    max_grpc_timeout: 0s
                - match: { prefix: "/activitytypecomm.ActivityTypeSvc"}
                  route:
                    cluster: activitytype_service
                    max_grpc_timeout: 0s
                - match: { prefix: "/reportcomm.ReportSvc"}
                  route:
                    cluster: report_service
                    max_grpc_timeout: 0s
                cors:
                  allow_origin_string_match:
                  - safe_regex:
                      google_re2: {}
                      regex: \*
                  allow_methods: GET, PUT, DELETE, POST, OPTIONS
                  allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                  max_age: "1728000"
                  expose_headers: custom-header-1,grpc-status,grpc-message
                  filter_enabled:
                    default_value: { numerator: 100, denominator: HUNDRED }
                    runtime_key: cors.www.enabled
            http_filters:
              - name: envoy.filters.http.grpc_web
              - name: envoy.filters.http.cors
              - name: envoy.filters.http.router
  clusters:
    - name: activity_service
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      upstream_connection_options:
        tcp_keepalive:
          keepalive_time: 300
      load_assignment:
        cluster_name: activity_service
        endpoints:
        - lb_endpoints:
            endpoint:
              address:
                socket_address:
                  address: devenv
                  port_value: 9090
    - name: activitytype_service
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      upstream_connection_options:
        tcp_keepalive:
          keepalive_time: 300
      load_assignment:
        cluster_name: activitytype_service
        endpoints:
        - lb_endpoints:
            endpoint:
              address:
                socket_address:
                  address: devenv
                  port_value: 9091
    - name: order_service
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      upstream_connection_options:
        tcp_keepalive:
          keepalive_time: 300
      load_assignment:
        cluster_name: order_service
        endpoints:
        - lb_endpoints:
            endpoint:
              address:
                socket_address:
                  address: devenv
                  port_value: 9092
    - name: report_service
      connect_timeout: 5s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      upstream_connection_options:
        tcp_keepalive:
          keepalive_time: 300
      load_assignment:
        cluster_name: report_service
        endpoints:
        - lb_endpoints:
            endpoint:
              address:
                socket_address:
                  address: devenv
                  port_value: 9093
